# google-test-demo

./: .gitignore  CMakeLists.txt
docs/: README.md
include/: MockUser.h  User.h
include/gtest/: gtest.h
src/: main.cpp
